cyclonedx-bom/src/specs/v1_3/snapshots/cyclonedx_bom__specs__v1_3__license__test__it_should_handle_licenses_correctly_license_choice_expressions.snap
---
source: cyclonedx-bom/src/specs/v1_3/license.rs
expression: actual
---
[
  {
    "expression": "expression"
  },
  {
    "expression": "expression"
  }
]
