cyclonedx-bom/src/specs/v1_3/snapshots/cyclonedx_bom__specs__v1_3__license__test__it_should_write_xml_full.snap
---
source: cyclonedx-bom/src/specs/v1_3/license.rs
assertion_line: 302
expression: xml_output

---
<?xml version="1.0" encoding="utf-8"?>
<licenses>
  <license>
    <id>spdx id</id>
    <text content-type="content type" encoding="encoding">content</text>
    <url>url</url>
  </license>
  <license>
    <name>name</name>
    <text content-type="content type" encoding="encoding">content</text>
    <url>url</url>
  </license>
  <expression>expression</expression>
</licenses>
